--- a/html/index.html
+++ b/html/index.html
@@ -43,16 +43,17 @@
                 <li><a href="#">產品資訊 Product</a></li>
                 <li><a href="#">聯絡我們 Contact</a></li>
             </ul> -->
-            <div class = "wapperContent">
-                <img src = "../img/logo/only-logo.png">
-                
-                <div class = "wapperContentWord">
-                    <a href = "#">HOME</a><br>
-                    <a href = "#">ABOUT</a><br>
-                    <a href = "#">SERVICES</a><br>
-                    <a href = "#">PRODUCTS</a><br>
-                    <a href = "#">CONTACT</a>
+            <div class="wapperContent">
+                <img src="../img/logo/only-logo.png" style="width:80px;position: absolute;position:0px 0px;">
+
+                <div class="wapperContentWord">
+                    <a href="#">HOME</a><br>
+                    <a href="#">ABOUT</a><br>
+                    <a href="#">SERVICES</a><br>
+                    <a href="#">PRODUCTS</a><br>
+                    <a href="#">CONTACT</a>
                 </div>
+
 
             </div>
 
@@ -64,32 +65,29 @@
         <div class="container" style=margin-top:100px>
             <div class="row">
                 <div class="col-lg-6">
-                    <div style="padding:80px; margin-top: 100px;margin-bottom: 100px;">
+                    <div style="padding:80px; margin-top: 100px;margin-bottom: 50px;">
                         <h1 class="indexh1">WHAT WE<br>DO.
                             <h2 class="indexh2">服務項目</h2>
                             <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
                             </p>
                             <button class="roundbutton" onclick="window.location.href='./Words.html'">查看更多</button>
                     </div>
-                    <div class="indexContent reveal">
+                    <div id = "Service01" class="indexContent reveal">
                         <h3 class="indexh3">服務項目</h3>
                         <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
                     </div>
-                    <div class="indexContent reveal">
+                    <div id = "Service02" class="indexContent reveal">
                         <h3 class="indexh3">服務項目</h3>
                         <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
                     </div>
-                    <div class="indexContent reveal">
+                    <div  id = "Service03" class="indexContent reveal">
                         <h3 class="indexh3">服務項目</h3>
                         <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
                     </div>
-
-
-
                 </div>
-
                 <!-- 到時候替換動畫效果 -->
-                <div class="col-lg-6 d-flex" style="background-color:#c2c2c2; height:900px;">
+                <div class="col-lg-6 d-flex sticky-top" style="background-color:#c2c2c2; height:900px;">
+                    <img id="#indexImg" src = "../img/index/index-01.png">
                 </div>
             </div>
 
