--- a/indexanime/index-animetion.html
+++ b/indexanime/index-animetion.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anime</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
 
 
 </head>
@@ -34,7 +34,7 @@
 
 
 
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
