--- a/html/index.html
+++ b/html/index.html
@@ -84,10 +84,22 @@
                         <h3 class="indexh3">服務項目</h3>
                         <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
                     </div>
+                    <div  id = "Service04" class="indexContent reveal">
+                        <h3 class="indexh3">服務項目</h3>
+                        <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                    </div>
+                    <div  id = "Service05" class="indexContent reveal">
+                        <h3 class="indexh3">服務項目</h3>
+                        <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                    </div>
+                    <div  id = "Service06" class="indexContent reveal">
+                        <h3 class="indexh3">服務項目</h3>
+                        <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                    </div>
                 </div>
                 <!-- 到時候替換動畫效果 -->
                 <div class="col-lg-6 d-flex sticky-top" style="background-color:#c2c2c2; height:900px;">
-                    <img id="#indexImg" src = "../img/index/index-01.png">
+                    <img id="indexImg" src = "../img/index/index-01.png">
                 </div>
             </div>
 
