--- a/html/contact.html
+++ b/html/contact.html
@@ -26,14 +26,41 @@
         </div>
     </div>
     <div id="content" class="container">
-        <div id="contactContent" class="container">
-            <div id="map">
+        <div id="contactContent" class="container row">
+            <div id="contactForm" class="col-sm">
+                <form action="GET">
+                    <label>姓名<span>*</span><br />
+                        <input type="text" name="Name" placeholder="Name">
+                    </label><br />
+                    <label>公司<span>*</span><br />
+                        <input type="text" name="Company" placeholder="Company">
+                    </label><br />
+                    <label>聯絡電話<span>*</span><br />
+                        <input type="text" name="Tel" placeholder="Phone Number">
+                    </label><br />
+                    <label>電子郵件<span>*</span><br />
+                        <input type="text" name="Email" placeholder="E-mail">
+                    </label><br />
+                    <label>諮詢內容<span>*</span><br />
+                        <textarea name="Content" placeholder="Messages">
 
-            </div>
-            <div id="contactForm">
-                <form action="">
-
+                        </textarea>
+                    </label><br />
+                    <label>驗證碼<span>*</span><br />
+                        <input type="text" name="Content" placeholder="Messages">
+                    </label><br />
+                    <input type="submit" value="SEND">
                 </form>
+            </div>
+            <div id="map" class="col-sm">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.9510216505255!2d120.65267762474834!3d24.13835813450139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d9f70a0914b%3A0xc15f47247005141c!2z5Yex6IyC6LOH6KiK6IKh5Lu95pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2sus!4v1655799360204!5m2!1szh-TW!2sus"
+                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+                <p>
+                    TEL:04-2375 8388#19 FAX:04-23759399
+                </p>
             </div>
         </div>
 
