--- a/html/index.html
+++ b/html/index.html
@@ -98,8 +98,8 @@
                     </div>
                 </div>
                 <!-- 到時候替換動畫效果 -->
-                <div class="col-lg-6 d-flex sticky-top" style="background-color:#c2c2c2; height:900px;">
-                    <img id="indexImg" src = "../img/index/index-01.png">
+                <div class="col-lg-6 d-flex" style="background-color:#ffffff; height:900px; position:sticky;top:0;">
+                    <img id="indexImg" class = "rounded" src = "../img/index/index-01.png">
                 </div>
             </div>
 
@@ -139,7 +139,7 @@
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <small>2020-20-20</small>
+                                        <small class = "smallDate">2020-20-20</small>
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">查看更多</button>
                                         </div>
@@ -156,7 +156,7 @@
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <small>2020-20-20</small>
+                                        <small class = "smallDate">2020-20-20</small>
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">查看更多</button>
                                         </div>
@@ -173,7 +173,7 @@
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <small>2020-20-20</small>
+                                        <small class = "smallDate">2020-20-20</small>
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">查看更多</button>
                                         </div>
