--- a/html/news.html
+++ b/html/news.html
@@ -61,25 +61,20 @@
                     </div>
                 </div>
             </div>
-
+            <!-- 幻燈片控制icon -->
             <div class="height10">
-                <!-- 輪播進度提示 -->
+                <!-- 點選控制 -->
                 <div class="carousel-indicators">
-                    <button type="button" data-target="#carouselExampleIndicators" data-slide-to="0" class="active"
-                        aria-label="Slide 1"></button>
+                    <button type="button" data-target="#carouselExampleIndicators" data-slide-to="0" class="active" aria-label="Slide 1"></button>
                     <button type="button" data-target="#carouselExampleIndicators" data-slide-to="1"></button>
                     <button type="button" data-target="#carouselExampleIndicators" data-slide-to="2"></button>
                 </div>
                 <!-- 左右箭頭 -->
-                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators"
-                    data-slide="prev">
+                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <!-- <span class="visually-hidden">Previous</span> -->
                 </button>
-                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators"
-                    data-slide="next">
+                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <!-- <span class="visually-hidden">Next</span> -->
                 </button>
 
             </div>
@@ -148,59 +143,81 @@
                     熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
             </div>
 
-            <!-- 幻燈片 -->
-            <div id="carouselExampleIndicators" class="carousel slide mt-5" data-ride="carousel">
-                <!-- 輪播內容 -->
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="row">
-                            <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg"
-                                class="height10 col-xl-4" alt="1">
-                            <div class="col-sm-8 px-3">
-                                <h4>Heading</h4>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                                    vitae
-                                    eos
-                                    tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                                    aut
-                                    laboriosam fuga vitae!</p>
-                            </div>
-                        </div>
+            <div class="frame">
+                <div class="gallery">
+                    <div class="row posterBox">
+                        <img class="posters " src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_3266_19.jpg" alt="!">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
+                            vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
+                            aut
+                            laboriosam fuga vitae!</p>
+                    </div>                   
+                    <div class="posterBox">
+                        <img class="posters " src="http://farm4.staticflickr.com/3795/9269794168_3ac58fc15c_b.jpg" alt="!">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
+                            vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
+                            aut
+                            laboriosam fuga vitae!</p>
                     </div>
-                    <div class="carousel-item">
-                        <div class="row">
-                            <img src="http://farm4.staticflickr.com/3795/9269794168_3ac58fc15c_b.jpg"
-                                class="height10 col-xl-4" alt="2">
-                            <div class="col-sm-8 px-3">
-                                <h4>Heading</h4>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                                    vitae
-                                    eos
-                                    tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                                    aut
-                                    laboriosam fuga vitae!</p>
-                            </div>
-                        </div>
+                    <div class="posterBox">
+                        <img class="posters " src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg" alt="!">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
+                            vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
+                            aut
+                            laboriosam fuga vitae!</p>
                     </div>
-                    <div class="carousel-item">
-                        <div class="row">
-                            <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_3266_19.jpg"
-                                class="height10 col-xl-4" alt="3">
-                            <div class="col-sm-8 px-3">
-                                <h4>Heading</h4>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
-                                    vitae
-                                    eos
-                                    tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
-                                    aut
-                                    laboriosam fuga vitae!</p>
-                            </div>
-                        </div>
+                    <div class="row posterBox">
+                        <img class="posters " src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_3266_19.jpg" alt="!">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
+                            vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
+                            aut
+                            laboriosam fuga vitae!</p>
+                    </div>                   
+                    <div class="posterBox">
+                        <img class="posters " src="http://farm4.staticflickr.com/3795/9269794168_3ac58fc15c_b.jpg" alt="!">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
+                            vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
+                            aut
+                            laboriosam fuga vitae!</p>
+                    </div>
+                    <div class="posterBox">
+                        <img class="posters " src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg" alt="!">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate eaque error
+                            vitae
+                            eos
+                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero
+                            aut
+                            laboriosam fuga vitae!</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script>
+        // Wheel事件:滾輪向下滑動時,內容左右滑動
+        var gallery = document.querySelector(".gallery");
+        gallery.addEventListener("wheel", (event) => {
+            event.preventDefault;
+            gallery.scrollLeft += (event.deltaY)*3 ;
+        });
+    </script>
 </body>
 
 </html>
