公司電話更新

--- a/html/contact.html
+++ b/html/contact.html
@@ -59,7 +59,7 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
                 <p>
-                    TEL:04-2375 8388#19 FAX:04-23759399
+                    TEL:04-2375 8388 FAX:04-23759399
                 </p>
             </div>
         </div>
