--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -91,7 +91,8 @@
         <!-- 合作夥伴 -->
         <div class="partner givePadding ">
             <h3 class="indexh2 text-center mt-5">合作夥伴</h3>
-            <p class="text-center container indexp mt-5" style="width:65% ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates adipisci, ea eum quae unde numquam. Voluptatem mollitia, enim voluptatibus, odio nam quam illo tempore cumque eligendi sapiente vero, aspernatur nostrum.</p>
+            <p class="text-center container indexp mt-5" style="width:65% ;">我們與各領域的科技廠商密切合作，提供符合您架構的解決方案，協助您為客戶創造更多價值。這些合作當中，包含了策略聯盟與技術聯盟兩種合作夥伴。 
+                <br/>確保在產品安裝與使用過程當中都能維持順暢的客戶體驗。 </p>
             <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel" data-interval ="1000000">
 
                
