--- a/html/news.html
+++ b/html/news.html
@@ -208,6 +208,24 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer>
+            <div class="container-fluid footer p-5">
+                <div style="text-align:center; width:100% ;margin:auto;">
+                    <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
+                    <hr>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Home</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">About</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Services</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Contact</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Product</a>
+                    <br>
+                    <br>
+                    <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script>
