--- a/html/product.html
+++ b/html/product.html
@@ -19,61 +19,110 @@
     <div class="container">
 
         <!-- 產品新訊 -->
-        <div>
-            <div class="container-fluid height30 bg-secondary text-light d-flex align-items-center">
-                <h2 class="col-xl-5 align-items-center text-right indexh2">產品新訊</h2>
-                <p class="col-xl-7 align-items-center indexp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                    neque porro ad ducimus adipisci iusto
-                    doloribus explicabo maxime voluptas corrupti itaque molestiae, at recusandae reprehenderit ex aut ab
-                    provident eum.</p>
+        <div class="row browserHeight">
+            <div class="col-xl-6">
+                <h1 class="indexh1 mt-5">OUR<br/>PRODUCT</h1>
+                <h2 class="indexh2">產品資訊</h2>
+                <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
             </div>
 
-            <div class="row height50">
-                <div class="col-xl-6">
-                    <video src=""></video>
-                    <!-- 主打產品影片 -->
-                </div>
-                <div class="col-xl-6">
-                    <h3>主打產品123</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem at veritatis eos commodi et
-                        illo molestiae enim quidem, odio maiores non quas dicta distinctio harum esse, dolorum soluta
-                        expedita. Distinctio!</p>
+            <div class="col-xl-6">
+                <!-- 主打產品影片 -->
+                <iframe class="height50" src="https://www.youtube.com/embed/sr_VSS_gnGE"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>            
+        </div>
+
+        <div class="row">
+            <div class="col-xl-6 card bg-secondary text-light">
+                <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="1">
+                <div class="card-img-overlay">
+                    <h3 class="card-title">Heading</h3>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                        eaque error vitae
+                        eos
+                        tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                        laboriosam fuga vitae!</p>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-xl-4 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="1">
-                    <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
-                            eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
-                    </div>
+            <div class="col-xl-6 card bg-secondary text-light">
+                <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="2">
+                <div class="card-img-overlay">
+                    <h3 class="card-title">Heading</h3>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                        eaque error vitae
+                        eos
+                        tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                        laboriosam fuga vitae!</p>
                 </div>
-                <div class="col-xl-4 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="2">
-                    <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
-                            eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
-                    </div>
+            </div>
+            <div class="col-xl-6 card bg-secondary text-light">
+                <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="3">
+                <div class="card-img-overlay">
+                    <h3 class="card-title">Heading</h3>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                        eaque error vitae
+                        eos
+                        tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                        laboriosam fuga vitae!</p>
                 </div>
-                <div class="col-xl-4 card bg-secondary text-light">
-                    <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="3">
-                    <div class="card-img-overlay">
-                        <h3 class="card-title">Heading</h3>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
-                            eaque error vitae
-                            eos
-                            tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
-                            laboriosam fuga vitae!</p>
-                    </div>
+            </div>
+            <div class="col-xl-6 card bg-secondary text-light">
+                <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="4">
+                <div class="card-img-overlay">
+                    <h3 class="card-title">Heading</h3>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                        eaque error vitae
+                        eos
+                        tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                        laboriosam fuga vitae!</p>
+                </div>
+            </div>
+            <div class="col-xl-6 card bg-secondary text-light">
+                <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="5">
+                <div class="card-img-overlay">
+                    <h3 class="card-title">Heading</h3>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                        eaque error vitae
+                        eos
+                        tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                        laboriosam fuga vitae!</p>
+                </div>
+            </div>
+            <div class="col-xl-6 card bg-secondary text-light">
+                <img class="rounded card-img" src="https://fakeimg.pl/400x300/" alt="6">
+                <div class="card-img-overlay">
+                    <h3 class="card-title">Heading</h3>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod cupiditate
+                        eaque error vitae
+                        eos
+                        tempora ut sunt, dolorem praesentium et nihil laboriosam ad fugiat quaerat! Libero aut
+                        laboriosam fuga vitae!</p>
                 </div>
             </div>
         </div>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid footer p-5">
+            <div style="text-align:center; width:100% ;margin:auto;">
+                <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
+                <hr>
+                <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Home</a>
+                <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">About</a>
+                <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Services</a>
+                <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Contact</a>
+                <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Product</a>
+                <br>
+                <br>
+                <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
+            </div>
+        </div>
+    </footer>
+
+</body>
+
+</html>
