--- a/html/index.html
+++ b/html/index.html
@@ -47,11 +47,11 @@
                 <img src="../img/logo/only-logo.png" style="width:80px;position: absolute;position:0px 0px;">
 
                 <div class="wapperContentWord">
-                    <a href="#">HOME</a><br>
-                    <a href="#">ABOUT</a><br>
-                    <a href="#">SERVICES</a><br>
-                    <a href="#">PRODUCTS</a><br>
-                    <a href="#">CONTACT</a>
+                    <a href="./index.html">HOME</a><br>
+                    <a href="./aboutus.html">ABOUT</a><br>
+                    <a href="./service.html">SERVICES</a><br>
+                    <a href="./product.html">PRODUCTS</a><br>
+                    <a href="./contact.html">CONTACT</a>
                 </div>
 
 
