--- a/indexanime/index-animetion.html
+++ b/indexanime/index-animetion.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anime</title>
-    <link rel="stylesheet" href="index.css">
-
-
+    <link rel="stylesheet" href="indexanimation.css">
 </head>
 <body>
     <div class="back">
@@ -34,7 +32,7 @@
 
 
 
-    <script src="index.js"></script>
+    <script src="indexanimaton.js"></script>
 </body>
 
 </html>
