--- a/html/index.html
+++ b/html/index.html
@@ -72,7 +72,7 @@
                             </p>
                             <button class="roundbutton" onclick="window.location.href='./Words.html'">查看更多</button>
                     </div>
-                    <div id = "Service01" class="indexContent reveal">
+                    <div id = "Service01" class="indexContent">
                         <h3 class="indexh3">軟體銷售服務</h3>
                         <p class="indexp">微軟授權、防毒軟體、Adobe授權、
                             繪圖軟體授權、虛擬化軟體、開發
@@ -80,7 +80,7 @@
                             援、郵件伺服務器及其他等規劃與
                             採購服務。</p>
                     </div>
-                    <div id = "Service02" class="indexContent reveal">
+                    <div id = "Service02" class="indexContent">
                         <h3 class="indexh3">雲端銷售服務</h3>
                         <p class="indexp">凱茂資訊為微軟的雲端服務供應商
                             (CSP)，提供Azure、O365、M365、
@@ -88,19 +88,19 @@
                             導入與教育訓練，整合企業內外的
                             Web AP及應用。</p>
                     </div>
-                    <div  id = "Service03" class="indexContent reveal">
+                    <div  id = "Service03" class="indexContent">
                         <h3 class="indexh3">系統整合服務</h3>
                         <p class="indexp">整合客戶現有資訊架構，根據客戶
                             規模規劃建置適合之資訊系統</p>
                     </div>
-                    <div  id = "Service04" class="indexContent reveal">
+                    <div  id = "Service04" class="indexContent">
                         <h3 class="indexh3">網路規劃服務</h3>
                         <p class="indexp">以安全層面考量為客戶進行網路架
                             構規畫網路核心設備、建置設備監
                             控主控台， 並包含機房機櫃等規劃
                             及建置。</p>
                     </div>
-                    <div  id = "Service05" class="indexContent reveal">
+                    <div  id = "Service05" class="indexContent">
                         <h3 class="indexh3">資訊安全服務</h3>
                         <p class="indexp">因應資安法規，協助客戶資安健檢、
                             弱點掃描、滲透測試、社交工程演
@@ -108,7 +108,7 @@
                             提供資安軟硬體產品銷售及資安服
                             務與課程。</p>
                     </div>
-                    <div  id = "Service06" class="indexContent reveal">
+                    <div  id = "Service06" class="indexContent">
                         <h3 class="indexh3">技術維護服務</h3>
                         <p class="indexp">擁有專業的技術團隊，協助客戶規
                             劃與建置安全網路、機房維運與相
